# xf86-video-spitfire

./: LICENSE  Makefile.am  README.md  configure.ac
src/: Makefile.am  oak-clocks.c  spitfire_accel.c  spitfire_accel.h  spitfire_driver.c  spitfire_driver.c.bak  spitfire_driver.h  spitfire_shadow.c  spitfire_vbe.c  spitfire_vbe.h
